--- a/app/src/main/res/layout/content_user_registration.xml
+++ b/app/src/main/res/layout/content_user_registration.xml
@@ -50,11 +50,11 @@
             android:inputType="phone"
             android:ems="10"
             android:hint="phone number"
-            android:id="@+id/et_phone" />
+            android:id="@+id/et_phone_number" />
 
         <EditText
             android:layout_margin="5dp"
-            android:layout_below="@+id/et_phone"
+            android:layout_below="@+id/et_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
