--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
     android:id="@+id/activity_user_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,34 +18,82 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <ImageView
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/tv2"
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_above="@+id/username_login"
+        android:textColor="#000000"
+        android:text="Username"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <EditText
+        android:layout_margin="8dp"
+        android:background="@drawable/edittext_design"
         android:layout_width="match_parent"
+        android:textSize="40sp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="username"
+        android:textColor="#000000"
         android:ems="10"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/username_login" />
 
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_below="@+id/username_login"
+        android:textColor="#000000"
+        android:text="Password"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <EditText
+        android:layout_margin="8dp"
+        android:background="@drawable/edittext_design"
+        android:textSize="40sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:hint="password"
-        android:layout_below="@+id/username_login"
+        android:textColor="#000000"
+        android:layout_below="@+id/tv1"
         android:layout_alignLeft="@+id/username_login"
         android:layout_alignStart="@+id/username_login"
         android:id="@+id/password_login" />
 
     <Button
+        android:background="@drawable/edittext_design"
         android:text="sign in"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/password_login"
         android:layout_centerHorizontal="true"
         android:id="@+id/signin" />
 
+    <TextView
+        android:gravity="center"
+        android:id="@+id/register_from_login_screen"
+        android:layout_margin="20dp"
+        android:layout_below="@+id/signin"
+        android:textColor="#000000"
+        android:text="Not a member yet? Sign up!"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
