--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -31,6 +31,8 @@
             android:layout_height="96dp" />
 
         <TextView
+            android:id="@+id/name"
+            android:text="Name"
             android:layout_below="@+id/profile_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
