--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,10 @@
     app:popupTheme="@style/AppTheme.PopupOverlay"
     android:id="@+id/toolbar">
 
+    <TextView
+        android:textSize="20sp"
+        android:id="@+id/toolbar_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </android.support.v7.widget.Toolbar>
