--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -7,24 +7,6 @@
     android:layout_height="match_parent"
     tools:context="com.gmonetix.slambook.user_login.UserLoginActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-            <include
-                layout="@layout/toolbar"/>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <ImageView
-        android:layout_margin="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/tv2"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
 
     <TextView
         android:id="@+id/tv2"
@@ -71,8 +53,6 @@
         android:ems="10"
         android:textColor="#000000"
         android:layout_below="@+id/tv1"
-        android:layout_alignLeft="@+id/username_login"
-        android:layout_alignStart="@+id/username_login"
         android:id="@+id/password_login" />
 
     <Button
@@ -84,33 +64,64 @@
         android:layout_below="@+id/password_login"
         android:layout_centerHorizontal="true"
         android:id="@+id/signin" />
-    <ScrollView
-        android:layout_below="@+id/signin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center"
-                android:id="@+id/register_from_login_screen"
-                android:layout_margin="20dp"
-                android:textColor="#000000"
-                android:text="Not a member yet? Sign up!"
-                android:textSize="20sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/search_friends_tv"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="#000000"
-                android:text="Search Friends"
-                android:layout_below="@+id/register_from_login_screen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-    </ScrollView>
+    <TextView
+        android:layout_below="@+id/signin"
+        android:gravity="center"
+        android:id="@+id/register_from_login_screen"
+        android:layout_margin="20dp"
+        android:textColor="#000000"
+        android:text="Not a member yet? Sign up!"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+            <include
+                layout="@layout/toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tv2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/sample_image_login_screen"
+            android:scaleType="fitXY"
+            android:layout_margin="20dp"
+            android:layout_width="146dp"
+            android:layout_height="114dp" />
+
+        <TextView
+            android:layout_gravity="center"
+            android:id="@+id/tvLoginHere"
+            android:layout_margin="8dp"
+            android:textColor="#000000"
+            android:text="Login Here"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:src="@drawable/footer1"
+        android:scaleType="fitXY"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
