--- a/app/src/main/res/drawable/edittext_design.xml
+++ b/app/src/main/res/drawable/edittext_design.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="4dp"
-        android:color="#8BC34A" />
+        android:width="2dp"
+        android:color="@color/colorAccent" />
 
     <gradient
         android:startColor="#FFFFFF"
@@ -13,6 +13,6 @@
         />
 
     <corners
-        android:radius="20dp" />
+        android:radius="5dp" />
 
 </shape>
