--- a/app/src/main/res/layout/activity_slams.xml
+++ b/app/src/main/res/layout/activity_slams.xml
@@ -4,10 +4,15 @@
     android:id="@+id/activity_slams"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gmonetix.slambook.Slams">
+
+    <ImageView
+        android:src="@drawable/pic1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView" />
 
 </RelativeLayout>
